mosfhet/mosfhet-sys/MOSFHET/include/mosfhet.h

typedef uint32_t Torus;
typedef uint64_t Torus;
typedef int16_t Binary;
/* Polynomials */
typedef struct {
  Torus * coeffs;
  int N;
} * TorusPolynomial;
typedef struct {
  double * coeffs;
  int N;
} * DFT_Polynomial;
typedef struct {
  Binary * coeffs;
  int N;
} * BinaryPolynomial;
/* TRLWE */
typedef struct {
  TorusPolynomial * a, b;
  int k;
} * TRLWE;
typedef struct {
  DFT_Polynomial * a, b;
  int k;
} * TRLWE_DFT;
typedef struct {
  TRLWE_DFT ** s;
  int base_bit, t, k;
} * TRLWE_KS_Key;
/* TRGSW */
typedef struct {
  TRLWE * samples;
  int l, Bg_bit;
} * TRGSW;
typedef struct {
  TRLWE_DFT * samples;
  int l, Bg_bit;
} * TRGSW_DFT;
/* Registers */

typedef struct {
  TRGSW_DFT positive, negative;
} * TRGSW_REG;
/* Bootstrap */

typedef struct {
  TRGSW_DFT * s;
  TRGSW * su;
  int n, k, N, Bg_bit, l, unfolding;
} * Bootstrap_Key;
typedef struct {
  TRGSW_DFT * s;
  TRGSW * su;
  TRLWE_KS_Key * ak;
  int n, k, N, Bg_bit, l, unfolding;
} * Bootstrap_GA_Key;
/* Functions */

/* Torus */
double torus2double(Torus x);
Torus double2torus(double x);
uint64_t torus2int(Torus x, int log_scale);
Torus int2torus(uint64_t x, int log_scale);
/* Functions */

/* Polynomials */ 
TorusPolynomial polynomial_new_torus_polynomial(int N);
TorusPolynomial * polynomial_new_array_of_torus_polynomials(int N, int size);
DFT_Polynomial polynomial_new_DFT_polynomial(int N);
DFT_Polynomial * polynomial_new_array_of_polynomials_DFT(int N, int size);
BinaryPolynomial polynomial_new_binary_polynomial(int N);
void polynomial_decompose(TorusPolynomial * out, TorusPolynomial in, int Bg_bit, int l);
void polynomial_torus_scale(TorusPolynomial out, TorusPolynomial in, int log_scale);
void polynomial_add_torus_polynomials(TorusPolynomial out, TorusPolynomial in1, TorusPolynomial in2);
void polynomial_addto_torus_polynomial(TorusPolynomial out, TorusPolynomial in);
void polynomial_sub_torus_polynomials(TorusPolynomial out, TorusPolynomial in1, TorusPolynomial in2);
void polynomial_subto_torus_polynomial(TorusPolynomial out, TorusPolynomial in);
void torus_polynomial_mul_by_xai(TorusPolynomial out, TorusPolynomial in, int a);
void torus_polynomial_mul_by_xai_addto(TorusPolynomial out, TorusPolynomial in, int a);
void torus_polynomial_mul_by_xai_minus_1(TorusPolynomial out, TorusPolynomial in, int a);
void polynomial_naive_mul_binary(BinaryPolynomial out, BinaryPolynomial in1, BinaryPolynomial in2);
void polynomial_naive_mul_torus(TorusPolynomial out, TorusPolynomial in1, TorusPolynomial in2);
void polynomial_mul_torus(TorusPolynomial out, TorusPolynomial in1, TorusPolynomial in2);
void polynomial_mul_addto_torus(TorusPolynomial out, TorusPolynomial in1, TorusPolynomial in2);
void polynomial_naive_mul_addto_torus(TorusPolynomial out, TorusPolynomial in1, TorusPolynomial in2);
void polynomial_naive_mul_addto_torus_binary(TorusPolynomial out, TorusPolynomial in1, BinaryPolynomial in2);
void polynomial_DFT_to_torus(TorusPolynomial out, const DFT_Polynomial in);
void polynomial_torus_to_DFT(DFT_Polynomial out, TorusPolynomial in);
void polynomial_mul_DFT(DFT_Polynomial out, DFT_Polynomial in1, DFT_Polynomial in2);
void polynomial_mul_addto_DFT(DFT_Polynomial out, DFT_Polynomial in1, DFT_Polynomial in2);
void polynomial_sub_DFT_polynomials(DFT_Polynomial out, DFT_Polynomial in1, DFT_Polynomial in2);
void polynomial_copy_torus_polynomial(TorusPolynomial out, TorusPolynomial in);
void polynomial_negate_torus_polynomial(TorusPolynomial out, TorusPolynomial in);
void polynomial_copy_DFT_polynomial(DFT_Polynomial out, DFT_Polynomial in);
void free_polynomial(void * p);
void free_DFT_polynomial(DFT_Polynomial p);
void free_array_of_polynomials(void * p, int size);
void init_fft(int N);
void polynomial_full_mul_with_scale(TorusPolynomial out, TorusPolynomial in1, TorusPolynomial in2, int bit_size, int scale_bit);