mosfhet/mosfhet-sys/src/bindings.rs

#[test]
fn bindgen_test_layout__bindgen_ty_17() {
    const UNINIT: ::std::mem::MaybeUninit<_bindgen_ty_17> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<_bindgen_ty_17>(),
        16usize,
        concat!("Size of: ", stringify!(_bindgen_ty_17))
    );
    assert_eq!(
        ::std::mem::align_of::<_bindgen_ty_17>(),
        8usize,
        concat!("Alignment of ", stringify!(_bindgen_ty_17))
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).positive) as usize - ptr as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_bindgen_ty_17),
            "::",
            stringify!(positive)
        )
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).negative) as usize - ptr as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_bindgen_ty_17),
            "::",
            stringify!(negative)
        )
    );
}
pub type TRGSW_REG = *mut _bindgen_ty_17;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _bindgen_ty_18 {
    pub s: *mut TRGSW_DFT,
    pub su: *mut TRGSW,
    pub n: ::libc::c_int,
    pub k: ::libc::c_int,
    pub N: ::libc::c_int,
    pub Bg_bit: ::libc::c_int,
    pub l: ::libc::c_int,
    pub unfolding: ::libc::c_int,
}
#[test]
fn bindgen_test_layout__bindgen_ty_18() {
    const UNINIT: ::std::mem::MaybeUninit<_bindgen_ty_18> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<_bindgen_ty_18>(),
        40usize,
        concat!("Size of: ", stringify!(_bindgen_ty_18))
    );
    assert_eq!(
        ::std::mem::align_of::<_bindgen_ty_18>(),
        8usize,
        concat!("Alignment of ", stringify!(_bindgen_ty_18))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).s) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_bindgen_ty_18),
            "::",
            stringify!(s)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).su) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_bindgen_ty_18),
            "::",
            stringify!(su)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).n) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(_bindgen_ty_18),
            "::",
            stringify!(n)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).k) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(_bindgen_ty_18),
            "::",
            stringify!(k)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).N) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(_bindgen_ty_18),
            "::",
            stringify!(N)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).Bg_bit) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(_bindgen_ty_18),
            "::",
            stringify!(Bg_bit)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).l) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(_bindgen_ty_18),
            "::",
            stringify!(l)
        )
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).unfolding) as usize - ptr as usize
        },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(_bindgen_ty_18),
            "::",
            stringify!(unfolding)
        )
    );
}
pub type Bootstrap_Key = *mut _bindgen_ty_18;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _bindgen_ty_19 {
    pub s: *mut TRGSW_DFT,
    pub su: *mut TRGSW,
    pub ak: *mut TRLWE_KS_Key,
    pub n: ::libc::c_int,
    pub k: ::libc::c_int,
    pub N: ::libc::c_int,
    pub Bg_bit: ::libc::c_int,
    pub l: ::libc::c_int,
    pub unfolding: ::libc::c_int,
}
#[test]
fn bindgen_test_layout__bindgen_ty_19() {
    const UNINIT: ::std::mem::MaybeUninit<_bindgen_ty_19> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<_bindgen_ty_19>(),
        48usize,
        concat!("Size of: ", stringify!(_bindgen_ty_19))
    );
    assert_eq!(
        ::std::mem::align_of::<_bindgen_ty_19>(),
        8usize,
        concat!("Alignment of ", stringify!(_bindgen_ty_19))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).s) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_bindgen_ty_19),
            "::",
            stringify!(s)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).su) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_bindgen_ty_19),
            "::",
            stringify!(su)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ak) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(_bindgen_ty_19),
            "::",
            stringify!(ak)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).n) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(_bindgen_ty_19),
            "::",
            stringify!(n)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).k) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(_bindgen_ty_19),
            "::",
            stringify!(k)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).N) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(_bindgen_ty_19),
            "::",
            stringify!(N)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).Bg_bit) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(_bindgen_ty_19),
            "::",
            stringify!(Bg_bit)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).l) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(_bindgen_ty_19),
            "::",
            stringify!(l)
        )
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).unfolding) as usize - ptr as usize
        },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(_bindgen_ty_19),
            "::",
            stringify!(unfolding)
        )
    );
}
pub type Bootstrap_GA_Key = *mut _bindgen_ty_19;
extern "C" {
    pub fn torus2double(x: Torus) -> f64;
}
extern "C" {
    pub fn double2torus(x: f64) -> Torus;
}
extern "C" {
    pub fn torus2int(x: Torus, log_scale: ::libc::c_int) -> u64;
}
extern "C" {
    pub fn int2torus(x: u64, log_scale: ::libc::c_int) -> Torus;
}
extern "C" {
    pub fn polynomial_new_torus_polynomial(N: ::libc::c_int)
        -> TorusPolynomial;
}
extern "C" {
    pub fn polynomial_new_array_of_torus_polynomials(
        N: ::libc::c_int,
        size: ::libc::c_int,
    ) -> *mut TorusPolynomial;
}
extern "C" {
    pub fn polynomial_new_DFT_polynomial(N: ::libc::c_int) -> DFT_Polynomial;
}
extern "C" {
    pub fn polynomial_new_array_of_polynomials_DFT(
        N: ::libc::c_int,
        size: ::libc::c_int,
    ) -> *mut DFT_Polynomial;
}
extern "C" {
    pub fn polynomial_new_binary_polynomial(
        N: ::libc::c_int,
    ) -> BinaryPolynomial;
}
extern "C" {
    pub fn polynomial_decompose(
        out: *mut TorusPolynomial,
        in_: TorusPolynomial,
        Bg_bit: ::libc::c_int,
        l: ::libc::c_int,
    );
}
extern "C" {
    pub fn polynomial_torus_scale(
        out: TorusPolynomial,
        in_: TorusPolynomial,
        log_scale: ::libc::c_int,
    );
}
extern "C" {
    pub fn polynomial_add_torus_polynomials(
        out: TorusPolynomial,
        in1: TorusPolynomial,
        in2: TorusPolynomial,
    );
}
extern "C" {
    pub fn polynomial_addto_torus_polynomial(
        out: TorusPolynomial,
        in_: TorusPolynomial,
    );
}
extern "C" {
    pub fn polynomial_sub_torus_polynomials(
        out: TorusPolynomial,
        in1: TorusPolynomial,
        in2: TorusPolynomial,
    );
}
extern "C" {
    pub fn polynomial_subto_torus_polynomial(
        out: TorusPolynomial,
        in_: TorusPolynomial,
    );
}
extern "C" {
    pub fn torus_polynomial_mul_by_xai(
        out: TorusPolynomial,
        in_: TorusPolynomial,
        a: ::libc::c_int,
    );
}
extern "C" {
    pub fn torus_polynomial_mul_by_xai_addto(
        out: TorusPolynomial,
        in_: TorusPolynomial,
        a: ::libc::c_int,
    );
}
extern "C" {
    pub fn torus_polynomial_mul_by_xai_minus_1(
        out: TorusPolynomial,
        in_: TorusPolynomial,
        a: ::libc::c_int,
    );
}
extern "C" {
    pub fn polynomial_naive_mul_binary(
        out: BinaryPolynomial,
        in1: BinaryPolynomial,
        in2: BinaryPolynomial,
    );
}
extern "C" {
    pub fn polynomial_naive_mul_torus(
        out: TorusPolynomial,
        in1: TorusPolynomial,
        in2: TorusPolynomial,
    );
}
extern "C" {
    pub fn polynomial_mul_torus(
        out: TorusPolynomial,
        in1: TorusPolynomial,
        in2: TorusPolynomial,
    );
}
extern "C" {
    pub fn polynomial_mul_addto_torus(
        out: TorusPolynomial,
        in1: TorusPolynomial,
        in2: TorusPolynomial,
    );
}
extern "C" {
    pub fn polynomial_naive_mul_addto_torus(
        out: TorusPolynomial,
        in1: TorusPolynomial,
        in2: TorusPolynomial,
    );
}
extern "C" {
    pub fn polynomial_naive_mul_addto_torus_binary(
        out: TorusPolynomial,
        in1: TorusPolynomial,
        in2: BinaryPolynomial,
    );
}
extern "C" {
    pub fn polynomial_DFT_to_torus(out: TorusPolynomial, in_: DFT_Polynomial);
}
extern "C" {
    pub fn polynomial_torus_to_DFT(out: DFT_Polynomial, in_: TorusPolynomial);
}
extern "C" {
    pub fn polynomial_mul_DFT(
        out: DFT_Polynomial,
        in1: DFT_Polynomial,
        in2: DFT_Polynomial,
    );
}
extern "C" {
    pub fn polynomial_mul_addto_DFT(
        out: DFT_Polynomial,
        in1: DFT_Polynomial,
        in2: DFT_Polynomial,
    );
}
extern "C" {
    pub fn polynomial_sub_DFT_polynomials(
        out: DFT_Polynomial,
        in1: DFT_Polynomial,
        in2: DFT_Polynomial,
    );
}
extern "C" {
    pub fn polynomial_copy_torus_polynomial(
        out: TorusPolynomial,
        in_: TorusPolynomial,
    );
}
extern "C" {
    pub fn polynomial_negate_torus_polynomial(
        out: TorusPolynomial,
        in_: TorusPolynomial,
    );
}
extern "C" {
    pub fn polynomial_copy_DFT_polynomial(
        out: DFT_Polynomial,
        in_: DFT_Polynomial,
    );
}
extern "C" {
    pub fn free_polynomial(p: *mut ::libc::c_void);
}
extern "C" {
    pub fn free_DFT_polynomial(p: DFT_Polynomial);
}
extern "C" {
    pub fn free_array_of_polynomials(
        p: *mut ::libc::c_void,
        size: ::libc::c_int,
    );
}
extern "C" {
    pub fn init_fft(N: ::libc::c_int);
}
extern "C" {
    pub fn polynomial_full_mul_with_scale(
        out: TorusPolynomial,
        in1: TorusPolynomial,
        in2: TorusPolynomial,
        bit_size: ::libc::c_int,
        scale_bit: ::libc::c_int,
    );
}
